# voice-soundboard

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  SCORECARD.md  SECURITY.md  SHIP_GATE.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dogfood.yml  publish.yml  release.yml
assets/audio_events/: manifest.json
docs/: DEFERRED_FEATURES.md  DUCKING.md  MCP_REGISTRAR_INTEGRATION.md  MIGRATION_v1_to_v2.md  REGISTRAR_ARCHITECTURE.md  ROADMAP_v2.1.md  ROADMAP_v2.3.md  ROADMAP_v2.4.md  ROADMAP_v2.5.md  ROADMAP_v2.6.md  ROADMAP_v2.7.md  ROADMAP_v2.8.md  ROADMAP_v2.9.md  ROADMAP_v3.1.md  ROADMAP_v3.md  STATE_MODEL_REFERENCE.md  V3_AUDIO_INVARIANTS.md  V3_READINESS_AUDIT.md  audio_events.md  index.html  index.md  v32_spatial_audio.md
site/: astro.config.mjs
site/src/: site-config.ts
tests/: __init__.py  test_accessibility.py  test_audio_events.py  test_batch.py  test_cache.py  test_cloning.py  test_compiler.py  test_conversation.py  test_debug.py  test_ducking.py  test_engine.py  test_event_timing.py  test_formats.py  test_golden_timeline.py  test_graph.py  test_incremental.py  test_integration.py  test_monitoring.py  test_plugins.py  test_quality.py  test_realtime.py  test_speakers.py  test_streaming.py  test_timeline_properties.py  test_version.py
tests/registrum/: __init__.py  conftest.py  test_accessibility.py  test_attestation.py  test_latency.py  test_lifecycle.py  test_mcp.py  test_mediation.py  test_ownership.py  test_plugin.py  test_recovery.py  test_regression.py  test_replay.py
tests/v29_soak/: __init__.py  conftest.py  test_soak.py
tests/v31_hardening/: __init__.py  test_conversation.py  test_graph_validation.py  test_plugins.py  test_presets.py  test_soak.py
tests/v32_spatial/: __init__.py  test_spatial_core.py  test_spatial_invariants.py  test_spatial_movement.py  test_spatial_performance.py  test_spatial_stress.py
tests/v3_audit/: __init__.py  test_v3_compatibility.py
tools/: validate_audio_events.py
voice_soundboard/: __init__.py
voice_soundboard/accessibility/: __init__.py  bridge.py  captions.py  cognitive.py  descriptions.py  motor.py  navigation.py  testing.py  visual.py
voice_soundboard/adapters/: __init__.py  api.py  asset_validator.py  audio_events.py  cli.py
voice_soundboard/ambiance/: __init__.py  generator.py  presets.py
voice_soundboard/analytics/: __init__.py  cost.py  quality.py  usage.py
voice_soundboard/cloning/: __init__.py  extractor.py  storage.py
voice_soundboard/compiler/: __init__.py  compile.py  emotion.py  incremental.py  style.py  text.py  voices.py
voice_soundboard/conversation/: __init__.py  conversation.py  parser.py  speaker.py  turn.py
voice_soundboard/debug/: __init__.py  diff.py  info.py  profiler.py  visualizer.py
voice_soundboard/distributed/: __init__.py  cluster.py  queue.py  shard.py
voice_soundboard/engine/: __init__.py  base.py  loader.py
voice_soundboard/formats/: __init__.py  converter.py  loudness.py  negotiation.py  sample_rate.py
voice_soundboard/graph/: __init__.py  types.py
voice_soundboard/intelligence/: __init__.py  emotion.py  pacing.py  silence.py
voice_soundboard/mcp/: __init__.py  interrupts.py  observability.py  policy.py  server.py  sessions.py  testing.py  tools.py
voice_soundboard/monitoring/: __init__.py  health.py  logging.py  metrics.py
voice_soundboard/plugins/: __init__.py  audio.py  backend.py  base.py  compiler.py  hooks.py  registry.py
voice_soundboard/quality/: __init__.py  comparison.py  evaluation.py  metrics.py
voice_soundboard/realtime/: __init__.py  buffer.py  config.py  engine.py
voice_soundboard/runtime/: __init__.py  batch.py  cache.py  ducking.py  stream.py  timeline.py
voice_soundboard/scenes/: __init__.py  builder.py  mixer.py  scene.py
voice_soundboard/security/: __init__.py  audit.py  rate_limit.py  sandbox.py  secrets.py  validation.py
voice_soundboard/serverless/: __init__.py  aws.py  azure.py  gcp.py  handler.py
voice_soundboard/spatial/: __init__.py  mixer.py  position.py  scene.py
voice_soundboard/speakers/: __init__.py  database.py
voice_soundboard/streaming/: __init__.py  (+1 more)
(+42 files in other folders)
