[project]
name = "voice-soundboard"
version = "2.0.0"
description = "Text-to-speech for AI agents and developers. Compiler → Graph → Engine architecture."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com"}
]
keywords = [
    "tts",
    "text-to-speech",
    "mcp",
    "ai",
    "voice",
    "speech",
    "audio",
]

dependencies = [
    "numpy>=1.24.0",
    "soundfile>=0.12.1",
]

[project.optional-dependencies]
kokoro = [
    "kokoro-onnx>=0.4.0",
    "onnxruntime>=1.16.0",
]
piper = [
    "piper-tts>=1.2.0",
]
mcp = [
    "mcp>=1.0.0",
]
websocket = [
    "websockets>=12.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
all = [
    "kokoro-onnx>=0.4.0",
    "onnxruntime>=1.16.0",
    "piper-tts>=1.2.0",
    "mcp>=1.0.0",
    "websockets>=12.0",
]

[project.scripts]
voice-soundboard = "voice_soundboard.adapters.cli:main"

[project.urls]
Homepage = "https://github.com/mcp-tool-shop-org/voice-soundboard-v2"
Repository = "https://github.com/mcp-tool-shop-org/voice-soundboard-v2"
Issues = "https://github.com/mcp-tool-shop-org/voice-soundboard-v2/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voice_soundboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
