[project]
name = "voice-soundboard"
version = "2.6.3"
description = "Text-to-speech for AI agents and developers. Compiler → Graph → Engine architecture."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com"}
]
keywords = [
    "tts",
    "text-to-speech",
    "mcp",
    "ai",
    "voice",
    "speech",
    "audio",
]

dependencies = [
    "numpy>=1.24.0",
    "soundfile>=0.12.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
kokoro = [
    "kokoro-onnx>=0.4.0",
    "onnxruntime>=1.16.0",
]
piper = [
    "piper-tts>=1.2.0",
]
mcp = [
    "mcp>=1.0.0",
]
websocket = [
    "websockets>=12.0",
]
# v2.1: New backend dependencies
openai = [
    "openai>=1.0.0",
]
coqui = [
    "TTS>=0.21.0",
]
# v2.1: Voice cloning dependencies
cloning = [
    "resemblyzer>=0.1.1",
]
# v2.4: New backend dependencies
elevenlabs = [
    "elevenlabs>=1.0.0",
]
azure = [
    "azure-cognitiveservices-speech>=1.35.0",
]
# v2.4: Production security dependencies
security = [
    "restrictedpython>=7.0",
]
# v2.4: Distributed synthesis dependencies
distributed = [
    "redis>=5.0.0",
    "grpcio>=1.60.0",
    "prometheus-client>=0.19.0",
]
# v2.4: Audio intelligence dependencies
intelligence = [
    "transformers>=4.35.0",
    "torch>=2.0.0",
]
# v2.5: MCP integration dependencies
mcp-server = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.100.0",
    "ruff>=0.3",
    "pip-audit>=2.7.0",
]
all = [
    "kokoro-onnx>=0.4.0",
    "onnxruntime>=1.16.0",
    "piper-tts>=1.2.0",
    "mcp>=1.0.0",
    "websockets>=12.0",
    "openai>=1.0.0",
    "TTS>=0.21.0",
    "resemblyzer>=0.1.1",
    # v2.4 additions
    "elevenlabs>=1.0.0",
    "azure-cognitiveservices-speech>=1.35.0",
    "restrictedpython>=7.0",
    "redis>=5.0.0",
    "grpcio>=1.60.0",
    "prometheus-client>=0.19.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    # v2.5 additions
    "pydantic>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
voice-soundboard = "voice_soundboard.adapters.cli:main"

[project.urls]
Homepage = "https://github.com/mcp-tool-shop-org/voice-soundboard"
Repository = "https://github.com/mcp-tool-shop-org/voice-soundboard"
Issues = "https://github.com/mcp-tool-shop-org/voice-soundboard/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voice_soundboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
